update comanda y detalle Orden
